aligned my hero section to be correct compaired to the overlay desktop.

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5 {
 
 .u-signpost {
 	font-size: var(--h5-size);
-	letter-spacing: 7px;
+	letter-spacing: 5px;
 	text-transform: uppercase;
 }
 
@@ -89,14 +89,13 @@ h1, h2, h3, h4, h5 {
 .hero__topbar {
 	align-items: center;
 	display: flex;
-	padding: 10px 20px;
+	padding: 12px 0px;
 	flex: 1 0 100%;
 }
 
 .hero__logo {
 	color: var(--text-white);
 	font-size: var(--h3-size);
-	padding-left: 30px;
 }
 
 @media (max-width: 640px) {
@@ -118,6 +117,7 @@ h1, h2, h3, h4, h5 {
 
 .hero__menu {
 	margin-left: auto;
+	padding-right: 30px;
 }
 
 @media (max-width: 640px) {
@@ -129,11 +129,12 @@ h1, h2, h3, h4, h5 {
 .hero__link {
 	color: var(--text-white);
 	font-weight: bold;
-	padding: 20px;
+	padding: 10px;
+	margin-left: 14px;
 }
 
 .hero__subtitle {
-	margin-top: 50px;
+	margin-top: 96px;
 	margin-bottom: 24px;
 }
 
@@ -146,7 +147,7 @@ h1, h2, h3, h4, h5 {
 .hero__main {
 	font-size: var(--h1-size);
 	margin: 0;
-	margin-bottom: 24px;
+	margin-bottom: 33px;
 	line-height: var(--h1-line);
 }
 
@@ -157,15 +158,14 @@ h1, h2, h3, h4, h5 {
 }
 
 .hero__img {
-	max-width: 50%;
+	max-width: 75%;
 	object-fit: contain;
-	margin-top: 150px;
-	margin-bottom: 60px;
+	margin: 69px -8.5% 60px;
 }
 
 @media (max-width: 640px) {
 	.hero__img {
-	max-width: 100%;
+	max-width: 100%;o
 	align-self: flex-start;
 	margin-top: -40px;
 	}
@@ -173,8 +173,9 @@ h1, h2, h3, h4, h5 {
 
 .hero__description {
 	font-weight: bold;
-	margin-bottom: 40px;
+	margin-bottom: 42px;
 	max-width: 370px;
+	line-height: 1.5;
 }
 
 @media (max-width: 640px) {
@@ -189,8 +190,7 @@ h1, h2, h3, h4, h5 {
 	border-radius: 5px;
 	font-weight: bold;
 	transition: all 2s ease-out;
-	height: 48px;
-	width: 170px;
+	padding: 12px 55px;
 }
 
 @media (max-width: 640px){
@@ -212,8 +212,7 @@ h1, h2, h3, h4, h5 {
 	border-radius: 5px;
 	font-weight: bold;
 	margin-bottom: 54px;
-	padding: 10px;
-	width: 170px;
+	padding: 13px 56px;
 }
 
 .yellow {
